# Rashunal

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
client/: Makefile  rash.c
driver/: CMakeLists.txt
driver/src/: main.c
rashunal/: CMakeLists.txt  Config.cmake.in
rashunal/include/: rashunal.h  rashunal_util.h
rashunal/src/: rashunal.c  rashunal_util.c
rashunal/test/: CMakeLists.txt
rashunal/test/src/: test_rashunal.c  test_util.c
